...
        }}
      >
        <ListItem
          supportingText={space.data.description || space.data.slug}
          trailing={
            <Button
              label="Settings"
              onPress={() =>
                router.push({ pathname: "/space/[spaceSlug]/settings", params: { spaceSlug } })
              }
              variant="text"
            />
          }
...
